fix conference title text-align

--- a/web/themes/custom/legacy/css/src/_c-ConferenceTitles.less
+++ b/web/themes/custom/legacy/css/src/_c-ConferenceTitles.less
@@ -30,7 +30,9 @@
 // Styleguide Components.ConferenceTitles
 .c-ConferenceTitles {
   font-family: 'futura-pt','Open Sans','Helvetica Neue','Helvetica',sans-serif;
+  @media not all and (min-width: 45em) {
   text-align: center;
+  }
   @media (min-width: 75em) {
     .font-size-mod(20/16);
   }
